# mcp-hello-server

./: CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: dependabot-auto-merge.yml  image-scan.yml  publish-dockerhub.yml  publish-pypi.yml  publish.yml  scan-scheduled.yml  test.yml
src/mcp_hello_server/: __init__.py  greetings.py  server.py
tests/: test_bdd.py  test_greetings.py  test_server.py
tests/features/: greet.feature  server_info.feature
