[project]
name = "mcp-hello-server"
version = "0.1.0"
description = "A minimal MCP server: a server_info health check and a multilingual greeting tool"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Mitch Allen", email = "npm@mitchallen.com" },
]
keywords = ["mcp", "fastmcp", "hello", "greeting", "starter"]
dependencies = [
    "fastmcp>=2.9.0",
]

[project.urls]
Homepage = "https://github.com/mitchallen/mcp-hello-server"
Repository = "https://github.com/mitchallen/mcp-hello-server"

[project.scripts]
mcp-hello-server = "mcp_hello_server.server:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-bdd>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_hello_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
